fix: apply CodeRabbit auto-fixes
Fixed 10 file(s) based on 7 unresolved review comments.

Co-authored-by: CodeRabbit <noreply@coderabbit.ai>